--- a/noteful/src/NotePageNav/NotePageNav.css
+++ b/noteful/src/NotePageNav/NotePageNav.css
@@ -3,7 +3,7 @@
     color: black;
     display: block;
     font-size: 30px;
-    margin: 100px 100px auto;
+    margin: 100px auto;
     max-width: 180px;
     padding: 4px 50px;
     text-decoration: none;
@@ -16,6 +16,6 @@
   .NotePageNav__folder-name {
     color: #475B5A;
     font-size: 18px;
-    margin-left: 100px;
+    margin-left: 50px;
   }
   
