--- a/noteful/src/NoteListNav/NoteListNav.css
+++ b/noteful/src/NoteListNav/NoteListNav.css
@@ -15,7 +15,7 @@
     text-decoration: none;
   }
 
-  .add_link button:hover, .NoteListNav__folder-link:hover {
+  .add_link:hover, .NoteListNav__folder-link:hover {
     color: white;
     cursor: pointer;
   }
@@ -36,17 +36,10 @@
     font-size: 30px;
     margin: 0 0 8px auto;
     max-width: 180px;
-    padding: 0px 16px;;
+    padding: 8px 16px;;
     text-decoration: none;
     background-color: #52D1DC;
+    color: black;
   }
 
-  .add_link button {
-    border: none;
-    font-size: 30px;
-    text-decoration: none;
-    color: black;
-    background-color: #52D1DC;
-  
-  }
   
