--- a/noteful/src/App.css
+++ b/noteful/src/App.css
@@ -13,6 +13,7 @@
     grid-area: header;
     padding-left: 30px;
     padding-top: 32px;
+    
   }
 
   .App__main {
@@ -22,7 +23,9 @@
   }
   
  .header-title {
-    font-size: 60px;
+    font-size: 70px;
     text-decoration: none;
     color: #52D1DC;
+    margin-left: 100px;
+    
 }
